--- a/.github/workflows/get-data.yml
+++ b/.github/workflows/get-data.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Check out repo
         uses: actions/checkout@v2
       - name: Install jq
-        run: apt install jq
+        run: sudo apt install jq
       - name: Get data
         run: |-
           curl -s http://download.companieshouse.gov.uk/persons-with-significant-control-snapshot-$(date +'%Y-%m-%d').zip |
